<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dip"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/altura" />

            <EditText
                android:id="@+id/txtAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:contentDescription="@string/description_altura"
                android:ems="10"

                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/peso"

                />

            <EditText
                android:id="@+id/txtPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:contentDescription="@string/description_peso"
                android:ems="10"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:contentDescription="@string/description_btn_calcular"
                android:text="@string/btn_calcular" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>